--- a/examples/styles/core/base.scss
+++ b/examples/styles/core/base.scss
@@ -30,13 +30,13 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #2db7f5;
   text-decoration: none;
 }
 a:hover,
 a:focus,
 a:visited {
-  color: #23527c;
+  color: #2db7f5;
   text-decoration: underline;
 }
 a:focus {
