add component pagination

--- a/examples/styles/pages/Page1.scss
+++ b/examples/styles/pages/Page1.scss
@@ -12,6 +12,11 @@
       .ui-input,
       .ui-tag {
         margin-right: 10px;
+      }
+
+      .ui-tag,
+      .ui-pagination {
+        margin-bottom: 10px;
       } 
     }
     
