--- a/examples/styles/core/base.scss
+++ b/examples/styles/core/base.scss
@@ -17,6 +17,7 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
   line-height: 1.42857143;
+  font-size: 12px;
   color: #383838;
   -webkit-font-smoothing: subpixel-antialiased;
 }
