--- a/styles/components/Pagination.scss
+++ b/styles/components/Pagination.scss
@@ -1,6 +1,5 @@
 
 .ui-pagination {
-  list-style: none;
   margin: 0;
   padding: 0;
   font-size: 12px;
@@ -43,14 +42,15 @@
 }
 
 .ui-pagination-item {
+  float: left;
+  display: inline-block;
   cursor: pointer;
   border-radius: 6px;
-  min-width: 32px;
-  height: 32px;
-  line-height: 32px;
+  min-width: 28px;
+  height: 28px;
+  line-height: 28px;
   text-align: center;
   list-style: none;
-  float: left;
   background-color: #fff;
   margin-right: 4px;
   font-family: Arial;
@@ -102,9 +102,11 @@
 .ui-pagination-addon-before {
   float: left;
   margin-right: 15px;
+  line-height: 28px;
 }
 
 .ui-pagination-addon-after {
   float: left;
   margin-left: 15px;
+  line-height: 28px;
 }
