--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -14,7 +14,7 @@
 }
 
 .ui-table {
-  @include table-size(12px, $base-radius);
+  @include table-size(8px 12px, $base-radius);
   font-size: 12px;
   color: #666;
   
@@ -28,7 +28,7 @@
     border-collapse: separate;
     border-spacing: 0;
     text-align: left;
-    overflow: hidden;
+    // overflow: hidden;
 
     tr {
       line-height: normal;
@@ -42,7 +42,6 @@
 
     th,
     td {
-      padding: 12px;
       border-bottom: 1px solid #e9e9e9;
     }
 
@@ -70,7 +69,7 @@
   }
 
   &.ui-table-striped {
-    > tbody {
+    tbody {
       > tr:nth-of-type(even) {
         background: #fbfbfb;
       }
@@ -78,13 +77,13 @@
   }
 
   &.size-xl {
-    @include table-size(20px 12px, $base-radius-xl);
+    @include table-size(14px, $base-radius-xl);
   }
   &.size-lg {
-    @include table-size(16px 12px, $base-radius-lg);
+    @include table-size(12px, $base-radius-lg);
   }
   &.size-sm {
-    @include table-size(8px 12px, $base-radius-sm);
+    @include table-size(6px 12px, $base-radius-sm);
   }
   &.size-xs {
     @include table-size(4px 12px, $base-radius-xs);
