--- a/styles/components/Dropdown.scss
+++ b/styles/components/Dropdown.scss
@@ -6,6 +6,7 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0,0,0,0.17);
   border-radius: 6px;
   text-align: left;
+  animation-duration: 300ms;
   z-index: 100;
   
   &.ui-dropdown-hidden {
