--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -91,7 +91,7 @@
   white-space: nowrap;
   background-image: none;
   border: 1px solid transparent;
-  border-width: 0;
+  /*border-width: 0;*/
   cursor: pointer;
   outline: 0;
   -webkit-appearance: none;
