step body color

--- a/styles/components/Step.scss
+++ b/styles/components/Step.scss
@@ -35,7 +35,7 @@
   .ui-step-item-body {
     margin-top: 3px;
     font-size: 14px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     color: #999;
   }
 
