--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -57,7 +57,7 @@
   padding: $padding;
   font-size: $font-size;
   height: $height;
-  line-height: $height;
+  line-height: $height - 2;
 
   &.radius {
     border-radius: $border-radius;
