--- a/styles/components/Menu.scss
+++ b/styles/components/Menu.scss
@@ -11,7 +11,7 @@
 .ui-menu-item {
   position: relative;
   display: block;
-  padding: 7px 10px;
+  padding: 10px;
   font-weight: normal;
   line-height: normal;
   font-size: 12px;
