--- a/styles/components/Breadcrumb.scss
+++ b/styles/components/Breadcrumb.scss
@@ -1,10 +1,18 @@
 
 .ui-breadcrumb {
+  margin-bottom: 20px;
+  padding: 10px 15px;
+  background-color: #f5f5f5;
+  line-height: normal;
   color: #999;
-  font-size: 12px;
 
   a {
     color: #666;
+    text-decoration: none;
+    
+    &:hover {
+      color: #2db7f5;
+    }
   }
 
   > span:last-child {
