--- a/styles/components/Icon.scss
+++ b/styles/components/Icon.scss
@@ -77,3 +77,4 @@
 .ui-icon-arrow-bottom:before { content: "\e63a"; }
 .ui-icon-arrow-left:before { content: "\e63b"; }
 .ui-icon-arrow-right:before { content: "\e63c"; }
+.ui-icon-date:before { content: "\e63d"; }
