--- a/styles/components/Tooltip.scss
+++ b/styles/components/Tooltip.scss
@@ -47,7 +47,7 @@
     }
   }
   .ui-tooltip-inner{
-    display: none;
+    //display: none;
     max-width: 200px;
     padding: 3px 8px;
     color: #fff;
@@ -76,14 +76,20 @@
      .ui-tooltip-inner{
        @extend %ui-tooltip-direction-top;
        left:0;
-       transform: translate3d(-50%, -100%, 0);
+       transform: translate3d(0, -100%, 0);
+       &:before{
+         left:8px;
+       }
      }
    }
   &.ui-tooltip-topRight{
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-top;
       left:100%;
-      transform: translate3d(-50%, -100%, 0);
+      transform: translate3d(-100%, -100%, 0);
+      &:before{
+        left:calc(100% - 8px);
+      }
     }
   }
 
@@ -99,14 +105,20 @@
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-right;
       top:0;
-      transform: translate3d(100%, -50%, 0);
+      transform: translate3d(100%, 0, 0);
+      &:before{
+        top:8px;
+      }
     }
   }
   &.ui-tooltip-rightBottom{
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-right;
       top:100%;
-      transform: translate3d(100%, -50%, 0);
+      transform: translate3d(100%, -100%, 0);
+      &:before{
+        top:calc(100% - 8px);
+      }
     }
   }
 
@@ -121,14 +133,20 @@
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-bottom;
       left:0;
-      transform: translate3d(-50%, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+      &:before{
+        left: 8px;
+      }
     }
   }
   &.ui-tooltip-bottomRight{
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-bottom;
       left:100%;
-      transform: translate3d(-50%, 100%, 0);
+      transform: translate3d(-100%, 100%, 0);
+      &:before{
+        left: calc(100% - 8px);
+      }
     }
   }
 
@@ -144,14 +162,20 @@
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-left;
       top:100%;
-      transform: translate3d(-100%, -50%, 0);
+      transform: translate3d(-100%, -100%, 0);
+      &:before{
+        top:calc(100% - 8px);
+      }
     }
   }
   &.ui-tooltip-leftTop{
     .ui-tooltip-inner{
       @extend %ui-tooltip-direction-left;
       top:0;
-      transform: translate3d(-100%, -50%, 0);
+      transform: translate3d(-100%, 0, 0);
+      &:before{
+        top: 8px;
+      }
     }
   }
 }
