修改过tooltip的展示

--- a/styles/components/Tooltip.scss
+++ b/styles/components/Tooltip.scss
@@ -47,7 +47,7 @@
     }
   }
   .ui-tooltip-inner{
-    //display: none;
+    display: none;
     max-width: 200px;
     padding: 3px 8px;
     color: #fff;
