--- a/styles/components/Calendar.scss
+++ b/styles/components/Calendar.scss
@@ -1,4 +1,38 @@
 
 .ui-calendar {
-  
+  display: inline-block;
+  border: 1px solid #d9d9d9;
+}
+
+.ui-calendar-body {
+  padding: 4px 8px;
+}
+
+.ui-calendar-cell {
+  padding: 4px 0;
+}
+
+.ui-calendar-date {
+  display: block;
+  margin: 0 4px;
+  color: #666;
+  border-radius: 4px;
+  width: 20px;
+  height: 20px;
+  line-height: 18px;
+  border: 1px solid transparent;
+  padding: 0;
+  background: transparent;
+  text-align: center;
+  transition: background .3s ease;
+
+  &:hover {
+    background: #eaf8fe;
+    cursor: pointer;
+  }
+
+  .ui-calendar-date-selected {
+    background: #2db7f5;
+    color: #fff;
+  }
 }
