--- a/styles/components/Calendar.scss
+++ b/styles/components/Calendar.scss
@@ -1,9 +1,55 @@
 
 .ui-calendar {
-  display: inline-block;
   border: 1px solid #d9d9d9;
 }
 
+/* header */
+.ui-calendar-header {
+  position: relative;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  border-bottom: 1px solid #e9e9e9;
+  user-select: none;
+
+  a {
+    color: #666;
+    text-decoration: none;
+
+    &:hover,
+    &:visited {
+      color: #2db7f5;
+      text-decoration: none;
+    }
+  }
+}
+
+.ui-calendar-header-pre-month-btn,
+.ui-calendar-header-next-month-btn {
+  position: absolute;
+  top: 0;
+  color: #999;
+  padding: 0 5px;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 34px;
+}
+
+.ui-calendar-header-pre-month-btn {
+  left: 0;
+}
+
+.ui-calendar-header-next-month-btn {
+  right: 0;
+}
+
+
+.ui-calendar-header-year-btn,
+.ui-calendar-header-month-btn {
+  padding: 0 2px;
+}
+
+/* body */
 .ui-calendar-body {
   padding: 4px 8px;
 }
@@ -24,15 +70,33 @@
   padding: 0;
   background: transparent;
   text-align: center;
-  transition: background .3s ease;
 
   &:hover {
     background: #eaf8fe;
     cursor: pointer;
   }
+}
 
-  .ui-calendar-date-selected {
+.ui-calendar-date-othermonth {
+  color: #ccc;
+}
+
+.ui-calendar-date-today {
+  color: #2db7f5;
+  border-color: #2db7f5;
+}
+
+.ui-calendar-date-disabled {
+  color: #ccc;
+  cursor: not-allowed;
+}
+
+.ui-calendar-date-selected {
+  background: #2db7f5;
+  color: #fff;
+
+  &:hover {
     background: #2db7f5;
-    color: #fff;
+    cursor: pointer;
   }
 }
