--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -38,3 +38,49 @@
     }
   }
 }
+
+.ui-modal-header {
+  position: relative;
+  height: 50px;
+  border-bottom: 1px solid #e9e9e9;
+  padding: 0 20px;
+
+  .ui-modal-title {
+    font-size: 16px;
+    line-height: 50px;
+  }
+
+  .ui-modal-close {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    font-size: 16px;
+    line-height: 50px;
+    color: #999;
+    cursor: pointer;
+    // transition: transform .2s ease;
+
+    &:hover {
+      color: #666;
+      // transform: rotate(360deg);
+    }
+  }
+}
+
+.ui-modal-body {
+  padding: 20px;
+  font-size: 14px;
+  overflow: auto;
+  user-select: auto;
+}
+
+.ui-modal-footer {
+  border-top: 1px solid #e9e9e9;
+  padding: 10px 18px;
+  text-align: right;
+
+  button + button {
+    margin-left: 10px;
+  }
+}
+
