--- a/styles/core/_variables.scss
+++ b/styles/core/_variables.scss
@@ -21,13 +21,17 @@ $base-height:              32px !default;
 $base-height-sm:           28px !default;
 $base-height-xs:           24px !default;
 
+$base-padding-xl:          14px !default;
+$base-padding-lg:          12px !default;
+$base-padding:             10px !default;
+$base-padding-sm:          8px !default;
+$base-padding-xs:          4px !default;
+
 $base-fontSize-xl:         16px !default;
 $base-fontSize-lg:         14px !default;
 $base-fontSize:            12px !default;
 $base-fontSize-sm:         12px !default;
 $base-fontSize-xs:         12px !default;
-
-
 
 
 $base-btn-default-color:   #333 !default;
