--- a/styles/components/Select.scss
+++ b/styles/components/Select.scss
@@ -1,4 +1,4 @@
-@mixin select-size($height, $font-size, $border-radius) {  
+@mixin select-size($height, $padding, $font-size, $border-radius) {  
   .ui-select-selection {
     height: $height;
     font-size: $font-size;
@@ -6,6 +6,14 @@
 
     .ui-select-text {
       line-height: $height - 2;
+      padding-left: $padding;
+      padding-right: 28px;
+    }
+
+    .ui-select-icon,
+    .ui-select-arrow {
+      right: $padding;
+      margin-top:  - $font-size / 2;
     }
   }
 
@@ -17,12 +25,11 @@
 }
 
 .ui-select {
-  @include select-size($base-height, $base-fontSize, $base-radius);
+  @include select-size($base-height, $base-padding, $base-fontSize, $base-radius);
   display: inline-block;
   margin: 0;
   position: relative;
   vertical-align: middle;
-  font-size: 12px;
   color: #666;
 
   .ui-select-selection {
@@ -51,19 +58,16 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
-      padding-left: 10px;
-      padding-right: 28px;
 
       &.ui-select-text-placeholder {
         color: #ccc;
       }
     }
 
+    .ui-select-icon,
     .ui-select-arrow {
       position: absolute;
       top: 50%;
-      right: 10px;
-      margin-top: -7px;
       color: #d9d9d9;
       transition: transform .2s ease;
       line-height: normal;
@@ -99,16 +103,16 @@
   }
 
   &.size-xl {
-    @include select-size($base-height-xl, $base-fontSize-xl, $base-radius-xl);
+    @include select-size($base-height-xl, $base-padding-xl, $base-fontSize-xl, $base-radius-xl);
   }
   &.size-lg {
-    @include select-size($base-height-lg, $base-fontSize-lg, $base-radius-lg);
+    @include select-size($base-height-lg, $base-padding-lg, $base-fontSize-lg, $base-radius-lg);
   }
   &.size-sm {
-    @include select-size($base-height-sm, $base-fontSize-sm, $base-radius-sm);
+    @include select-size($base-height-sm, $base-padding-sm, $base-fontSize-sm, $base-radius-sm);
   }
   &.size-xs {
-    @include select-size($base-height-xs, $base-fontSize-xs, $base-radius-xs);
+    @include select-size($base-height-xs, $base-padding-xs, $base-fontSize-xs, $base-radius-xs);
   }
 
 }
