--- a/styles/components/Calendar.scss
+++ b/styles/components/Calendar.scss
@@ -1,13 +1,13 @@
 
 .ui-calendar {
-  // border: 1px solid #d9d9d9;
+  width: 230px;
 }
 
 /* header */
 .ui-calendar-header {
   position: relative;
-  height: 34px;
-  line-height: 34px;
+  height: 40px;
+  line-height: 40px;
   text-align: center;
   border-bottom: 1px solid #e9e9e9;
   user-select: none;
@@ -22,83 +22,116 @@
       text-decoration: none;
     }
   }
-}
 
-.ui-calendar-header-pre-btn,
-.ui-calendar-header-next-btn {
-  position: absolute;
-  top: 0;
-  padding: 0 8px;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 34px;
-}
+  .ui-calendar-header-pre-btn,
+  .ui-calendar-header-next-btn {
+    position: absolute;
+    top: 0;
+    padding: 0 8px;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 40px;
+  }
 
-.ui-calendar-header-pre-btn {
-  left: 0;
-}
+  .ui-calendar-header-pre-btn {
+    left: 0;
+  }
 
-.ui-calendar-header-next-btn {
-  right: 0;
-}
+  .ui-calendar-header-next-btn {
+    right: 0;
+  }
 
-.ui-calendar-header-btn {
-  padding: 0 2px;
+  .ui-calendar-header-btn {
+    padding: 0 4px;
+  }
 }
 
 /* body */
 .ui-calendar-body {
-  padding: 6px;
-}
+  height: 210px;
+  padding: 4px 8px;
 
-.ui-calendar-cell {
-  padding: 4px 0;
-}
+  .ui-calendar-table {
+    width: 100%;
+    margin: 0 auto;
 
-.ui-calendar-week {
-  text-align: center;
-}
+    .ui-calendar-column {
+      text-align: center;
+    }
 
-.ui-calendar-date {
-  display: block;
-  margin: 0 4px;
-  color: #666;
-  border-radius: 4px;
-  width: 20px;
-  height: 20px;
-  line-height: 18px;
-  border: 1px solid transparent;
-  padding: 0;
-  background: transparent;
-  text-align: center;
-  font-weight: normal;
+    .ui-calendar-cell {
+      padding: 4px 0;
 
-  &:hover {
-    background: #eaf8fe;
-    cursor: pointer;
-  }
-}
+      .ui-calendar-text {
+        display: block;
+        margin: 0 auto;
+        color: #666;
+        border-radius: 4px;
+        width: 20px;
+        height: 20px;
+        line-height: 18px;
+        border: 1px solid transparent;
+        padding: 0;
+        background: transparent;
+        text-align: center;
+        font-weight: normal;
 
-.ui-calendar-date-othermonth {
-  color: #ccc;
-}
+        &:hover {
+          background: #eaf8fe;
+          cursor: pointer;
+        }
+      }
 
-.ui-calendar-date-today {
-  color: #2db7f5;
-  border-color: #2db7f5;
-}
+      .ui-calendar-text-others {
+        color: #ccc;
+      }
 
-.ui-calendar-date-disabled {
-  color: #ccc;
-  cursor: not-allowed;
-}
+      .ui-calendar-text-today {
+        color: #2db7f5;
+        border-color: #2db7f5;
+      }
 
-.ui-calendar-date-selected {
-  background: #2db7f5;
-  color: #fff;
+      .ui-calendar-text-disabled {
+        color: #ccc;
+        cursor: not-allowed;
+      }
 
-  &:hover {
-    background: #2db7f5;
-    cursor: pointer;
+      .ui-calendar-text-selected {
+        background: #2db7f5;
+        color: #fff;
+
+        &:hover {
+          background: #2db7f5;
+          cursor: pointer;
+        }
+      }
+    }
+
+    &.ui-calendar-year {
+      
+      .ui-calendar-cell {
+        padding: 10px 0;
+
+        .ui-calendar-text {
+          width: 40px;
+          height: 28px;
+          line-height: 26px;
+        }
+      } 
+    }
+
+    &.ui-calendar-month {
+      
+      .ui-calendar-cell {
+        padding: 10px 0;
+
+        .ui-calendar-text {
+          width: 50px;
+          height: 28px;
+          line-height: 26px;
+        }
+      } 
+    }
+
   }
 }
