--- a/styles/components/Panel.scss
+++ b/styles/components/Panel.scss
@@ -35,13 +35,31 @@
   }
 }
 
+.ui-panel-header,
+.ui-panel-footer {
+  position: relative;
+  height: 50px;
+  line-height: 49px;
+  padding: 0 15px;
+}
+
 .ui-panel-header {
-  padding: 10px 15px;
-  border-bottom: 1px solid transparent;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  border-bottom: 1px solid #e9e9e9;
+}
+.ui-panel-footer {
+  border-top: 1px solid #e9e9e9;
 }
 
 .ui-panel-body {
   padding: 15px;
+}
+
+.ui-panel-title {
+  font-size: 14px;
+}
+
+.ui-panel-more {
+  position: absolute;
+  top: 0;
+  right: 15px;
 }
