--- a/styles/components/Calendar.scss
+++ b/styles/components/Calendar.scss
@@ -15,8 +15,7 @@
     color: #666;
     text-decoration: none;
 
-    &:hover,
-    &:visited {
+    &:hover {
       color: #2db7f5;
       text-decoration: none;
     }
