--- a/styles/components/Tab.scss
+++ b/styles/components/Tab.scss
@@ -20,9 +20,188 @@
     }
   }
   .ui-tab-bd{
-    >div {
+    .ui-tab-bd-item {
       padding: 20px;
       box-sizing: border-box;
+      display: none;
+      opacity:0;
+      transition: all ease .5s;
+      &.active{
+        transition: all .5s;
+        display: block;
+        opacity:1;
+      }
     }
+  }
+}
+.ant-tabs-slide-horizontal-backward-enter {
+  -webkit-animation-duration: .2s;
+  animation-duration: .2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  opacity: 0;
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s
+}
+
+.ant-tabs-slide-horizontal-backward-enter.ant-tabs-slide-horizontal-backward-enter-active {
+  -webkit-animation-name: antMoveLeftIn;
+  animation-name: antMoveLeftIn;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-play-state: running;
+  animation-play-state: running
+}
+
+.ant-tabs-slide-horizontal-backward-leave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-animation-duration: .2s;
+  animation-duration: .2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s
+}
+
+.ant-tabs-slide-horizontal-backward-leave.ant-tabs-slide-horizontal-backward-leave-active {
+  -webkit-animation-name: antMoveRightOut;
+  animation-name: antMoveRightOut;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-play-state: running;
+  animation-play-state: running
+}
+
+.ant-tabs-slide-horizontal-forward-enter {
+  -webkit-animation-duration: .2s;
+  animation-duration: .2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  opacity: 0;
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s
+}
+
+.ant-tabs-slide-horizontal-forward-enter.ant-tabs-slide-horizontal-forward-enter-active {
+  -webkit-animation-name: antMoveRightIn;
+  animation-name: antMoveRightIn;
+  -webkit-animation-play-state: running;
+  animation-play-state: running;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0)
+}
+
+.ant-tabs-slide-horizontal-forward-leave {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  -webkit-animation-duration: .2s;
+  animation-duration: .2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s;
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
+  animation-timing-function: cubic-bezier(.86, 0, .07, 1)
+}
+
+.ant-tabs-slide-horizontal-forward-leave.ant-tabs-slide-horizontal-forward-leave-active {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-name: antMoveLeftOut;
+  animation-name: antMoveLeftOut;
+  -webkit-animation-play-state: running;
+  animation-play-state: running
+}
+
+@keyframes antMoveLeftIn {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    opacity: 0
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1
+  }
+}
+
+@keyframes antMoveLeftOut {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    opacity: 0
+  }
+}
+
+@keyframes antMoveRightIn {
+  0% {
+    opacity: 0;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%)
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0);
+    transform: translateX(0)
+  }
+}
+
+@keyframes antMoveRightOut {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    opacity: 0
   }
 }
