--- a/styles/components/Form.scss
+++ b/styles/components/Form.scss
@@ -42,6 +42,20 @@
 
 .ui-form-inline {
 
+  &:before {
+    content: " ";
+    display: table;
+  }
+
+  &:after {
+    content: " ";
+    display: table;
+    clear: both;
+    visibility: hidden;
+    font-size: 0;
+    height: 0;
+  }
+
   .ui-form-item {
     display: inline-block;
 
