--- a/styles/components/Tab.scss
+++ b/styles/components/Tab.scss
@@ -1,207 +1,55 @@
 .ui-tab{
   border: 1px solid #ddd;
+  &.radius{
+    border-radius: 4px;
+  }
   .ui-tab-hd{
-    list-style: none;
-    display: flex;
+    @include clearfix;
     margin:0;
+    list-style:none;
     padding:0;
     border-bottom:1px solid #ddd;
     height:30px;
     line-height:30px;
     li{
-      flex:1;
-      background:#ccc;
+      float:left;
+      background:#f4f4f4;
+      cursor: pointer;
       text-align: center;
       border-right:1px solid #ddd;
+      color: #666;
       &.active{
         background: #fff;
         border-bottom:2px solid #00b0e8;
+        margin-bottom:-1px;
+        color:#00b0e8;
       }
     }
   }
   .ui-tab-bd{
+    @include clearfix;
+    position: relative;
+    border: 1px solid #ddd;
+    border-top: none;
+    z-index: 100;
+    -webkit-transition: height .3s;
+    transition: height .3s;
     .ui-tab-bd-item {
-      padding: 20px;
-      box-sizing: border-box;
-      display: none;
-      opacity:0;
-      transition: all ease .5s;
-      &.active{
-        transition: all .5s;
-        display: block;
-        opacity:1;
+      position: absolute;
+      top: 0;
+      z-index: 99;
+      float: left;
+      width: 100%;
+      padding: 10px 10px 15px;
+      visibility: hidden;
+      transition: transform .3s;
+      transform: translateX(-100%);
+      &.ui-tab-bd-item-active{
+        position: relative;
+        z-index: 100;
+        visibility: visible;
+        transform: translateX(0);
       }
     }
-  }
-}
-.ant-tabs-slide-horizontal-backward-enter {
-  -webkit-animation-duration: .2s;
-  animation-duration: .2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  opacity: 0;
-  -webkit-animation-duration: .4s;
-  animation-duration: .4s
-}
-
-.ant-tabs-slide-horizontal-backward-enter.ant-tabs-slide-horizontal-backward-enter-active {
-  -webkit-animation-name: antMoveLeftIn;
-  animation-name: antMoveLeftIn;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-play-state: running;
-  animation-play-state: running
-}
-
-.ant-tabs-slide-horizontal-backward-leave {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  -webkit-animation-duration: .2s;
-  animation-duration: .2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  -webkit-animation-duration: .4s;
-  animation-duration: .4s
-}
-
-.ant-tabs-slide-horizontal-backward-leave.ant-tabs-slide-horizontal-backward-leave-active {
-  -webkit-animation-name: antMoveRightOut;
-  animation-name: antMoveRightOut;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-play-state: running;
-  animation-play-state: running
-}
-
-.ant-tabs-slide-horizontal-forward-enter {
-  -webkit-animation-duration: .2s;
-  animation-duration: .2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  opacity: 0;
-  -webkit-animation-duration: .4s;
-  animation-duration: .4s
-}
-
-.ant-tabs-slide-horizontal-forward-enter.ant-tabs-slide-horizontal-forward-enter-active {
-  -webkit-animation-name: antMoveRightIn;
-  animation-name: antMoveRightIn;
-  -webkit-animation-play-state: running;
-  animation-play-state: running;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0)
-}
-
-.ant-tabs-slide-horizontal-forward-leave {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  -webkit-animation-duration: .2s;
-  animation-duration: .2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-duration: .4s;
-  animation-duration: .4s;
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-  -webkit-animation-timing-function: cubic-bezier(.86, 0, .07, 1);
-  animation-timing-function: cubic-bezier(.86, 0, .07, 1)
-}
-
-.ant-tabs-slide-horizontal-forward-leave.ant-tabs-slide-horizontal-forward-leave-active {
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-name: antMoveLeftOut;
-  animation-name: antMoveLeftOut;
-  -webkit-animation-play-state: running;
-  animation-play-state: running
-}
-
-@keyframes antMoveLeftIn {
-  0% {
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-    opacity: 0
-  }
-
-  100% {
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1
-  }
-}
-
-@keyframes antMoveLeftOut {
-  0% {
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1
-  }
-
-  100% {
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-    opacity: 0
-  }
-}
-
-@keyframes antMoveRightIn {
-  0% {
-    opacity: 0;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%)
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(0);
-    transform: translateX(0)
-  }
-}
-
-@keyframes antMoveRightOut {
-  0% {
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1
-  }
-
-  100% {
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    opacity: 0
   }
 }
