--- a/styles/components/Input.scss
+++ b/styles/components/Input.scss
@@ -1,13 +1,13 @@
 @mixin input-size($height, $padding, $font-size, $border-radius) {
   height: $height;
-  line-height: 1.5;
+  /*line-height: 1.5;*/
   padding: $padding;
   font-size: $font-size;
   border-radius: $border-radius;
 }
 
 .ui-input {
-  @include input-size($base-height, 4px 7px, $base-fontSize, $base-radius);
+  @include input-size($base-height, 4px 10px 5px 10px, $base-fontSize, $base-radius);
   position: relative;
   display: inline-block;
   width: 100%;
@@ -48,16 +48,16 @@
 
   /* Input sizes */
   &.size-xl {
-    @include input-size($base-height-xl, 0 14px, $base-fontSize-xl, $base-radius-xl);
+    @include input-size($base-height-xl, 4px 14px, $base-fontSize-xl, $base-radius-xl);
   }
   &.size-lg {
-    @include input-size($base-height-lg, 0 11px, $base-fontSize-lg, $base-radius-lg);
+    @include input-size($base-height-lg, 4px 11px, $base-fontSize-lg, $base-radius-lg);
   }
   &.size-sm {
-    @include input-size($base-height-sm, 0 7px, $base-fontSize-sm, $base-radius-sm);
+    @include input-size($base-height-sm, 4px 7px, $base-fontSize-sm, $base-radius-sm);
   }
   &.size-xs {
-    @include input-size($base-height-xs, 0 4px, $base-fontSize-xs, $base-radius-xs);
+    @include input-size($base-height-xs, 4px 4px, $base-fontSize-xs, $base-radius-xs);
   }
 }
 
