--- a/styles/components/Dropdown.scss
+++ b/styles/components/Dropdown.scss
@@ -1,6 +1,6 @@
 
 .ui-dropdown {
-  min-width: 120px;
+  min-width: 100%;
   background-color: #fff;
   border: 1px solid #d9d9d9;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0,0,0,0.17);
