--- a/styles/components/Dropdown.scss
+++ b/styles/components/Dropdown.scss
@@ -1,10 +1,15 @@
+@mixin dropdown-size($border-radius) {  
+  &.radius {
+    border-radius: $border-radius;
+  }
+}
 
 .ui-dropdown {
+  @include dropdown-size($base-radius);
   min-width: 100%;
   background-color: #fff;
   border: 1px solid #d9d9d9;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0,0,0,0.17);
-  border-radius: 6px;
   text-align: left;
   animation-duration: 300ms;
   z-index: 100;
