--- a/styles/components/Pagination.scss
+++ b/styles/components/Pagination.scss
@@ -12,7 +12,7 @@
     visibility: hidden;
   }
 
-  &.ui-pagination-bordered {
+  &.bordered {
     .ui-pagination-item {
       border: 1px solid #d9d9d9;
       margin-right: 8px; 
@@ -38,13 +38,17 @@
     } 
   }
 
+  &.radius {
+    .ui-pagination-item {
+      border-radius: $base-radius;
+    }
+  }
 }
 
 .ui-pagination-item {
   float: left;
   display: inline-block;
   border: 1px solid transparent;
-  border-radius: 6px;
   min-width: 28px;
   height: 28px;
   line-height: 26px;
