--- a/styles/components/Panel.scss
+++ b/styles/components/Panel.scss
@@ -12,7 +12,6 @@
   margin-bottom: 20px;
   background-color: #fff;
   border: 1px solid transparent;
-  border-radius: 4px;
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
   box-shadow: 0 1px 1px rgba(0,0,0,.05);
   line-height: normal;
@@ -32,6 +31,10 @@
   }
   &.theme-error {
     @include panel-theme($base-btn-error-color, $base-btn-error-bg, $base-btn-error-border);
+  }
+
+  &.radius {
+    border-radius: $base-radius;
   }
 }
 
