--- a/styles/components/Switch.scss
+++ b/styles/components/Switch.scss
@@ -26,35 +26,7 @@
     transition: left .3s cubic-bezier(.78, .14, .15, .86);
   }
 
-  &.size-sm {
-    height: 14px;
-    line-height: 12px;
-    width: 28px;
-
-    &:after {
-      width: 12px;
-      height: 12px;
-      top: 0;
-      left: 0;
-    }
-
-    &.ui-switch-checked {
-      &:after {
-        left: 14px;
-      }
-
-      .ui-switch-inner {
-        left: 3px;
-      }
-    }
-
-    .ui-switch-inner {
-      left: 13px;
-      font-size: 10px;
-    }
-  }
-
-  &.ui-switch-checked {
+  &.checked {
     border: 1px solid $base-theme-info;
     background-color: $base-theme-info;
 
@@ -67,12 +39,40 @@
     }
   }
 
-  &.ui-switch-disabled {
+  &.disabled {
     cursor: not-allowed;
     opacity: 0.5;
 
     &:after {
       cursor: not-allowed;
+    }
+  }
+  
+  &.size-sm {
+    height: 14px;
+    line-height: 12px;
+    width: 28px;
+
+    &:after {
+      width: 12px;
+      height: 12px;
+      top: 0;
+      left: 0;
+    }
+
+    &.checked {
+      &:after {
+        left: 14px;
+      }
+
+      .ui-switch-inner {
+        left: 3px;
+      }
+    }
+
+    .ui-switch-inner {
+      left: 13px;
+      font-size: 10px;
     }
   }
 
