--- a/styles/components/Progress.scss
+++ b/styles/components/Progress.scss
@@ -10,16 +10,16 @@
   .ui-progress-bg {
     padding: $padding;
     font-size: $font-size;
-    height: $height / 2;
-    line-height: $height - 2;
+    height: $height;
+    line-height: $height;
   }
 
   &.radius {
-    border-radius: $border-radius * 3;
+    border-radius: $border-radius;
 
     .ui-progress-line-inner,
     .ui-progress-bg {
-      border-radius: $border-radius * 3;
+      border-radius: $border-radius;
     }
   }
   
@@ -40,7 +40,7 @@
   margin-bottom: 5px;
   width: 100%;
   font-size: 12px;
-  @include progress-size($base-height, 0 10px, $base-fontSize, $base-radius);
+  @include progress-size(8px, 0 10px, $base-fontSize, $base-radius);
 
   /* Progress themes */
   &.theme-default {
@@ -61,16 +61,16 @@
 
   /* Progress sizes */
   &.size-xl {
-    @include progress-size($base-height-xl, 0 14px, $base-fontSize-xl, $base-radius-xl);
+    @include progress-size(20px, 0 14px, $base-fontSize-xl, $base-radius-xl);
   }
   &.size-lg {
-    @include progress-size($base-height-lg, 0 12px, $base-fontSize-lg, $base-radius-lg);
+    @include progress-size(14px, 0 12px, $base-fontSize-lg, $base-radius-lg);
   }
   &.size-sm {
-    @include progress-size($base-height-sm, 0 8px, $base-fontSize-sm, $base-radius-sm);
+    @include progress-size(4px, 0 8px, $base-fontSize-sm, $base-radius-sm);
   }
   &.size-xs {
-    @include progress-size($base-height-xs, 0 4px, $base-fontSize-xs, $base-radius-xs);
+    @include progress-size(2px, 0 4px, $base-fontSize-xs, $base-radius-xs);
   }
 }
 
