--- a/examples/styles/core/base.scss
+++ b/examples/styles/core/base.scss
@@ -16,7 +16,7 @@ html {
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
-  line-height: 1.42857143;
+  line-height: 1.5;
   font-size: 14px;
   color: #333;
   -webkit-font-smoothing: subpixel-antialiased;
