--- a/styles/core/_variables.scss
+++ b/styles/core/_variables.scss
@@ -33,6 +33,7 @@ $base-fontSize:            14px !default;
 $base-fontSize-sm:         14px !default;
 $base-fontSize-xs:         12px !default;
 
+$base-line-height:         1.5 !default;
 
 $base-btn-default-color:   #333 !default;
 $base-btn-default-bg:      $base-theme-default !default;
