--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,6 +33,7 @@
       position: relative;
       margin: 60px auto;
       background: #fff;
+      box-shadow: 0 7px 21px rgba(0,0,0,.2);
       overflow: hidden;
       z-index: 1101;
     }
@@ -54,7 +55,7 @@
     position: absolute;
     top: 0;
     right: 15px;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 50px;
     color: #999;
     cursor: pointer;
