--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -30,12 +30,6 @@
 
     tr {
       line-height: normal;
-
-      &:last-child {
-        td {
-          border-bottom: 0;
-        }
-      }
     }
 
     th,
@@ -49,6 +43,14 @@
       transition: background .3s ease;
       position: relative;
       user-select: none;
+    }
+
+    tbody:last-child {
+      tr:last-child {
+        td {
+          border-bottom: 0;
+        }
+      }
     }
   }
 
@@ -71,6 +73,14 @@
     tbody {
       > tr:nth-of-type(even) {
         background: #fbfbfb;
+      }
+    }
+  }
+
+  &.ui-table-hover {
+    tbody {
+      tr:hover {
+        background-color: #f5f5f5;
       }
     }
   }
